fix: menu height addapts to visible content

--- a/src/components/menu-container/MenuContainer.scss
+++ b/src/components/menu-container/MenuContainer.scss
@@ -7,6 +7,5 @@
     .menu-container-visible-area {
         display: flex;
         position: relative;
-        height: 400px;
     }
 }
